# openweatherdata

./: CMakeLists.txt  cli.cpp  networking.cpp  networking.h  openweathermap.cpp  openweathermap.h  qopenweather.cpp  qopenweather.h  qweather.cpp  weather.cpp  weather.h
CLIWeather/: cli.cpp
QWeather/: mainwindow.qml  qopenweather.cpp  qopenweather.h  resources.qrc
libweather/: libweather.h  openweathermap.cpp  openweathermap.h  weather.cpp  weather.h  weatherrepositoryinterface.h
libweather/providers/OpenWeatherMap/: openweathermap.cpp  openweathermap.h
libweather/src/: libweather.cpp
libweatherjs/: bind.cpp
libweatherpy/: bind.cpp
